# SensorsAndSensing

./: .gitignore
LAB05_ColorSensor/: README.md  colorDetector.ino
LAB06_Lidar/: Lab_6_LiDAR_ROS2.ipynb  README.md  SSensing-Lab6.md
LAB06_Lidar/lab_LiDAR/: DockerfileLite  docker-compose.yaml  livox_lidar_config.json  set_livox_connection.sh
LAB06_Lidar/ros2_ws/src/lidar_lab/: README.md  package.xml  setup.cfg  setup.py
LAB06_Lidar/ros2_ws/src/lidar_lab/launch/: map_publisher.launch.py  plane_detector.launch.py
LAB06_Lidar/ros2_ws/src/lidar_lab/lidar_lab/: map_publisher_node.py  plane_detector_node.py
LAB07_CAMERA/: [Sensors_&_Sensing]_10_Camera_and_into_to_CV.ipynb  [Sensors_&_Sensing_Lab]_7_Camera.ipynb
LAB07_CAMERA/calibration_results/: calibration_params.txt  camera_calibration.npz
LAB0_ROS/: .gitignore  README.md
LAB0_ROS/ros2_ws/: frames_2026-01-27_18.51.20.gv
LAB0_ROS/ros2_ws/src/pkg_Anas/: package.xml  setup.cfg  setup.py
LAB0_ROS/ros2_ws/src/pkg_Anas/pkg_Anas/: encoder_driver.py  fake_encoder.py  wheel_odom.py
LAB1_encoders/: encoderPlotter.py
